# rterm

./: .gitignore  CMakeLists.txt  README.md  build.sh
src/: main.c  radial_menu_controller.c  radial_menu_controller.h  radial_menu_ui.c  radial_menu_ui.h  terminal.c  terminal.h  utils.c  utils.h
